* Configure nginx to add amqOff=true to cua url to disable ActiveMQ creds config. * Configure nginx to block access to ActiveMQ creds config Restful API calls.

--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -238,7 +238,6 @@ http {
 
         # For NVR Admin Functions
         location /cua/ {
-               proxy_redirect http://localhost:8083/cua https://$http_host;
                proxy_pass http://localhost:8083/cua/;
                proxy_http_version 1.1;
                proxy_set_header Upgrade $http_upgrade;
@@ -246,6 +245,23 @@ http {
                client_max_body_size 1G;
                proxy_read_timeout 300s;
         }
+
+        # For plain cua, add the amqOff parameter to remove the ActiveMQ creds/host editing facility.
+        #  That option is only to be used when directly connected to the NVR
+        location /cua {
+               proxy_pass http://localhost:8083/cua?amqOff=true;
+               proxy_http_version 1.1;
+               proxy_set_header Upgrade $http_upgrade;
+               proxy_set_header Connection $connection_upgrade;
+               client_max_body_size 1G;
+               proxy_read_timeout 300s;
+        }
+
+        # Block ability to disconnect own ActiveMQ connection while using it!
+        location ~* (checkForActiveMQCreds|addOrUpdateActiveMQCreds)$ {
+            deny all;
+        }
+
         # For tomcat manager (return error on attempted public access)
         location /manager/ {
             return 401;
