* Fix location regex error for checkForActiveMQCreds and addOrUpdateActiveMQCreds blocking on client accounts.

--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -258,7 +258,7 @@ http {
         }
 
         # Block ability to disconnect own ActiveMQ connection while using it!
-        location ~* (checkForActiveMQCreds|addOrUpdateActiveMQCreds)$ {
+        location ~* ^\/(user\/checkForActiveMQCreds|user\/addOrUpdateActiveMQCreds) {
             deny all;
         }
 
