--- a/xtrn-files-and-config/nginx.conf
+++ b/xtrn-files-and-config/nginx.conf
@@ -23,8 +23,9 @@ http {
     }
 
     server {
-       listen 443 ssl; 
-       server_tokens off;
+        listen 443 ssl;
+        server_tokens off;
+        proxy_buffering  off;
 
         ssl_certificate cloud.crt;
         ssl_certificate_key cloud.key;
