* Upgrade grails to version 6.2.0 * Upgrade gorm.version to 8.1.0

--- a/cloudwebapp/grails-app/conf/application.yml
+++ b/cloudwebapp/grails-app/conf/application.yml
@@ -95,6 +95,7 @@ spring:
     unique-names: true
 ---
 hibernate:
+  globally_quoted_identifiers: true # Required for Grails version 6.2.0
   cache:
     queries: false
     use_second_level_cache: false
