--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -25,8 +25,13 @@ dependencies {
     implementation group: 'org.apache.activemq', name: 'activemq-broker', version: '6.1.4'
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.17.2'
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
-
-
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.4.1'
+    implementation 'org.jetbrains:annotations:24.1.0'
+    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
+    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
+    implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.2.0'
+    implementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version: '1.0.0'
+    implementation 'org.projectlombok:lombok:1.18.36'
 
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
     implementation 'org.springframework.boot:spring-boot-starter-security'
