--- a/cloudwebapp/src/main/resources/application-dev.properties
+++ b/cloudwebapp/src/main/resources/application-dev.properties
@@ -1,6 +1,11 @@
 spring.application.name=cloudwebapp
 dataSource.dbCreate=update
 dataSource.url=jdbc:h2:/var/cloud-server/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.password=
+################### Hibernate Configuration ##########################
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 
 cloud.appHomeDirectory=/etc/cloud-server
 cloud.varHomeDirectory=/var/cloud-server
