--- a/cloudwebapp/src/main/resources/application-dev.properties
+++ b/cloudwebapp/src/main/resources/application-dev.properties
@@ -6,6 +6,7 @@ spring.datasource.password=
 ################### Hibernate Configuration ##########################
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring-security.enabled=true
 
 cloud.appHomeDirectory=/etc/cloud-server
 cloud.varHomeDirectory=/var/cloud-server
