--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name=cloudwebapp
 dataSource.dbCreate=update
-dataSource.url=jdbc:h2:/var/cloud-server/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+spring.dataSource.url=jdbc:h2:/var/cloud-server/db/prodDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.username=sa
 spring.datasource.password=
 ################### Hibernate Configuration ##########################
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring-security.enabled=true
 
 cloud.appHomeDirectory=/etc/cloud-server
 cloud.varHomeDirectory=/var/cloud-server
-
 
 cloud.mqTrustStorePath=/etc/cloud-server/client.ts
 # These are the credentials for the cloud account on the NVR
