--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -34,10 +34,12 @@ dependencies {
 
     implementation 'org.jetbrains:annotations:24.1.0'
     implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
+    implementation (group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.3')
     implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
  //   implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.2.0'
     implementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version: '1.0.0'
     implementation 'org.projectlombok:lombok:1.18.36'
+
 
 //    implementation 'org.springframework.security:spring-security-core:6.4.2'
 //    implementation 'org.springframework.security:spring-security-web:6.4.2'
