--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -5,8 +5,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'cloud'
-version = '0.0.1-SNAPSHOT'
+group = 'cloudwebapp'
+version = '11.0.0'
 
 java {
     toolchain {
@@ -22,8 +22,6 @@ dependencies {
     implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.4.1'
     implementation group: 'jakarta.jms', name: 'jakarta.jms-api', version: '3.1.0'
     implementation group: 'org.springframework', name: 'spring-messaging', version: '6.2.1'
-//    implementation group: 'org.springframework', name: 'spring-beans', version: '6.2.1'
-//    implementation group: 'org.springframework', name: 'spring-core', version: '6.2.1'
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.3'
 
     implementation group: 'org.apache.activemq', name: 'activemq-broker', version: '6.1.4'
@@ -36,15 +34,9 @@ dependencies {
     implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
     implementation (group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.3')
     implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
- //   implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '3.2.0'
     implementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version: '1.0.0'
     implementation 'org.projectlombok:lombok:1.18.36'
 
-
-//    implementation 'org.springframework.security:spring-security-core:6.4.2'
-//    implementation 'org.springframework.security:spring-security-web:6.4.2'
-//    implementation 'org.springframework.security:spring-security-config:6.4.2'
-//    implementation 'org.springframework.security:spring-security-crypto:6.4.2'
 
 
     implementation 'org.springframework.boot:spring-boot-starter-quartz'
@@ -68,3 +60,39 @@ bootRun {
     jvmArgs('-Dspring.profiles.active=dev')
     systemProperty 'server.port', '8086'
 }
+
+bootWar.dependsOn([':cloudFrontEnd:buildClient', ':cloudwebapp:setVersion'])
+
+bootWar {
+    webInf {
+        from('../cloudFrontEnd/dist/client')
+        include '**/*'
+        into('classes/static')
+    }
+}
+
+tasks.register('setVersion', Exec) {
+    mustRunAfter(':cloudwebapp:compileJava')
+    group = 'build'
+    description = 'Sets the version.txt file with the current version from git describe'
+    workingDir "$projectDir"
+    executable "sh"
+    args = ['-c', 'git describe --tags --dirty | tr -d \'\\n\' > src/main/resources/version.txt']
+}
+
+tasks.register('buildDebFile', Exec) {
+    group='build'
+    dependsOn([':cloudwebapp:bootWar'])
+    group = 'build'
+    workingDir "$projectDir/../xtrn-files-and-config/deb-file-creation"
+    commandLine './create-deb.sh'
+}
+
+tasks.withType(GroovyCompile).configureEach {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx1024m']
+    }
+}
+
+description = 'cloudwebapp'
+
