--- a/cloudwebapp/src/main/resources/application-dev.properties
+++ b/cloudwebapp/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ cloud.mqURL=failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
 cloud.privateKeyPath=../xtrn-files-and-config/privateKey
 cloud.browserFacingPort=8083
 cloud.logLevel=DEBUG
+cloud.logFileName=/var/log/cloud/cloud-server.log
 
 mail.smtp.configFile=/var/cloud-server/smtp.json
 
