--- a/cloudwebapp/src/main/resources/application-dev.properties
+++ b/cloudwebapp/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ cloud.password=DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU
 cloud.mqURL=failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
 cloud.privateKeyPath=../xtrn-files-and-config/privateKey
 cloud.browserFacingPort=8083
-cloud.logLevel=DEBUG
+cloud.logLevel=INFO
 cloud.logFileName=/var/log/cloud/cloud-server.log
 
 mail.smtp.configFile=/var/cloud-server/smtp.json
