--- a/cloudwebapp/src/main/resources/application.properties
+++ b/cloudwebapp/src/main/resources/application.properties
@@ -18,8 +18,10 @@ cloud.password=DrN3yuFAtSsK2w7AtTf66FFRVveBwtjU
 cloud.mqURL=failover://ssl://192.168.1.83:61617?socket.verifyHostName=false
 cloud.privateKeyPath=/etc/cloud-server/privateKey
 cloud.browserFacingPort=8083
-cloud.logLevel=DEBUG
 cloud.logFileName=/var/log/cloud/cloud-server.log
+cloud.logLevel=DEBUG
+cloud.mqLogFileName=/var/log/cloud/cloud-mq-listener.log
+cloud.mqLogLevel=DEBUG
 
 mail.smtp.configFile=/var/cloud-server/smtp.json
 
