--- a/cloudFrontEnd/angular.json
+++ b/cloudFrontEnd/angular.json
@@ -46,7 +46,9 @@
                         "./node_modules/file-saver/dist/FileSaver.min.js",
                         "./node_modules/sockjs-client/dist/sockjs.min.js",
                         "./node_modules/stompjs/lib/stomp.min.js",
-                        "./node_modules/object-hash/dist/object_hash.js"
+                        "./node_modules/object-hash/dist/object_hash.js",
+                        "./public/mediastreamtrackgenerator.js",
+                        "./public/audio-feeder-worklet.js"
             ],
             "extractLicenses": false,
             "sourceMap": true,
@@ -116,7 +118,9 @@
             ],
             "scripts": ["./node_modules/hls.js/dist/hls.light.min.js",
               "./node_modules/mpegts.js/dist/mpegts.js",
-              "./node_modules/moment/min/moment.min.js"
+              "./node_modules/moment/min/moment.min.js",
+              "./public/mediastreamtrackgenerator.js",
+              "./public/audio-feeder-worklet.js"
             ]
           }
         },
