--- a/cloudwebapp/build.gradle
+++ b/cloudwebapp/build.gradle
@@ -19,22 +19,22 @@ repositories {
 }
 
 dependencies {
-    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.4.1'
-    implementation group: 'jakarta.jms', name: 'jakarta.jms-api', version: '3.1.0'
-    implementation group: 'org.springframework', name: 'spring-messaging', version: '6.2.1'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor:3.4.1'
+    implementation 'jakarta.jms:jakarta.jms-api:3.1.0'
+    implementation 'org.springframework:spring-messaging:6.2.1'
     implementation 'org.springframework.boot:spring-boot-starter-websocket:3.3.3'
 
-    implementation group: 'org.apache.activemq', name: 'activemq-broker', version: '6.1.4'
-    implementation group: 'commons-codec', name: 'commons-codec', version: '1.17.2'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
-    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '3.4.1'
+    implementation 'org.apache.activemq:activemq-broker:6.1.4'
+    implementation 'commons-codec:commons-codec:1.17.2'
+    implementation 'com.google.code.gson:gson:2.11.0'
+    implementation 'org.springframework.data:spring-data-jpa:3.4.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation 'org.jetbrains:annotations:24.1.0'
-    implementation group: 'jakarta.mail', name: 'jakarta.mail-api', version: '2.1.3'
-    implementation (group: 'org.eclipse.angus', name: 'angus-mail', version: '2.0.3')
-    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.1.0'
-    implementation group: 'org.jboss.aerogear', name: 'aerogear-otp-java', version: '1.0.0'
+    implementation 'jakarta.mail:jakarta.mail-api:2.1.3'
+    implementation 'org.eclipse.angus:angus-mail:2.0.3'
+    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
+    implementation 'org.jboss.aerogear:aerogear-otp-java:1.0.0'
     implementation 'org.projectlombok:lombok:1.18.36'
 
 
